--- a/css/index.css
+++ b/css/index.css
@@ -12,11 +12,10 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 10% 30%;
-    font-family: 'PT Sans', sans-serif;
 }
 
 .container {
-    width: 350px;
+    width: 375px;
     border: 0;
     border-radius: 10px;
     background-color: white;
@@ -49,6 +48,11 @@ main {
     margin-inline: auto;
 }
 
+main h2 {
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
 main > * {
     margin: 1rem;
 }
@@ -64,6 +68,9 @@ form div > label input,
 form div > label select {
     width: 60%;
     float: right;
+    border: 1px solid black;
+    border-radius: 4px;
+    padding: .2rem;
 }
 
 form div > label select {
@@ -78,9 +85,18 @@ main button {
     width: 60%;
     margin-inline: auto;
     font-size: 30px;
-    background-color: limegreen;
-    border: 4px solid lime;
-    
+    border-width: 3px;
+    border-image:
+        linear-gradient(to top left, 
+        purple 20%, blue, transparent 50%);
+    border-image-slice: 1;
+    background-color: #68d7ff;
+    transform: skewX(-20deg);
+    color: white; 
+}
+
+main > button div {
+    transform: skewX(20deg);
 }
 
 .result > button {
